--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ virtualenv==15.0.3
 virtualenv-clone==0.2.6
 virtualenvwrapper==4.7.2
 xmltodict==0.10.2
+Cython==0.23.4
+numpy==1.10.4
+argparse==1.2.1
+h5py==2.5.0
+six==1.10.0
+wsgiref==0.1.2
